<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backMain"
    tools:context=".activity.ActivityLogin">


    <LinearLayout
        android:id="@+id/logoHead"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        

        <LinearLayout
            android:id="@+id/logoHead2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:background="@color/colorAccent">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_travel"/>

        </LinearLayout>



        <LinearLayout
            android:layout_below="@+id/logoHead2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="40dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:paddingTop="10dp"
                android:drawableLeft="@drawable/name_icon"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:paddingTop="30dp"
                android:drawableLeft="@drawable/password_icon_reg"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgotpass"
                android:gravity="right"
                android:paddingTop="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingTop="30dp">

            <Button
                android:id="@+id/btn_signin"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@color/bg_screen1"
                android:text="@string/signinbutton"
                android:textColor="@color/textcoloor"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notregi"
                android:gravity="center"
                android:paddingBottom="5dp"/>

            <Button
                android:clickable="true"
                android:layout_marginTop="5dp"
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@color/bg_screen1"
                android:text="@string/signupbutton"
                android:textColor="@color/textcoloor"/>

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:orientation="vertical">

           <!-- <View
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />-->
            <TextView
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copyright" />

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>
