<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backMain"
    tools:context=".activity.ActivitySignup">



    <ScrollView
        android:id="@+id/scrollvieww"
        android:layout_below="@+id/logoHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="20dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_upload_license"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/driving_license"
                    android:paddingTop="10dp"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:drawablePadding="10dp"
                    android:singleLine="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:editable="false"
                    android:drawableLeft="@drawable/car_icon"/>

                <ImageView
                    android:id="@+id/upload_sucess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/upload_success"
                    android:layout_gravity="right"
                    android:paddingTop="5dp"
                    android:visibility="gone"/>

            </FrameLayout>


            <EditText
                android:id="@+id/expiry_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/driving_license_expiry"
                android:paddingTop="20dp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:editable="false"
                android:imeOptions="actionNext"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/car_icon"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_upload_car_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/car_pic"
                android:paddingTop="20dp"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:drawablePadding="10dp"
                android:singleLine="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:editable="false"
                android:drawableLeft="@drawable/car_icon"/>

                <ImageView
                    android:id="@+id/upload_sucess2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/upload_success"
                    android:layout_gravity="right"
                    android:paddingTop="5dp"
                    android:visibility="gone"/>

            </FrameLayout>


            <EditText
                android:id="@+id/edt_car_plate_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/driving_license_plate"
                android:paddingTop="20dp"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/car_icon"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Car Name"
                    android:textSize="18dp"/>

                <Spinner
                    android:id="@+id/spinner_car_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"
                    android:layout_marginTop="10dp">

                </Spinner>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black"/>

            </LinearLayout>

            <!--first...-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingLeft="7dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textVieww"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/insurance"
                        android:textSize="18dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4">

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/yes"/>

                            </RadioGroup>



                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4">

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/no"/>

                            </RadioGroup>

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:id="@+id/View03"
                        android:layout_width="fill_parent"
                        android:layout_height="1dip"
                        android:background="@color/colorAccent" />

                </LinearLayout>

            </LinearLayout>



            <!--second-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingLeft="7dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/car_type"
                        android:textSize="18dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4">

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <RadioButton
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/ac"/>

                            </RadioGroup>



                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4">

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/noneac"/>

                            </RadioGroup>

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:id="@+id/View02"
                        android:layout_width="fill_parent"
                        android:layout_height="1dip"
                        android:background="@color/colorAccent" />

                </LinearLayout>

            </LinearLayout>

            <!--third-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingLeft="7dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/seating_capacity"
                        android:textSize="18dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4">

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/two"/>

                            </RadioGroup>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4">

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/four"/>

                            </RadioGroup>

                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4">

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/six"/>

                            </RadioGroup>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4">

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/eight"/>

                            </RadioGroup>

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:id="@+id/Vieww"
                        android:layout_width="fill_parent"
                        android:layout_height="1dip"
                        android:background="@color/colorAccent" />

                </LinearLayout>


            </LinearLayout>

            <!--fourth-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp">

            </LinearLayout>

            <!--five-->

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
