<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d6d7d8">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="300dp"
            android:id="@+id/upload_liceance"
            android:layout_gravity="center"
            android:layout_height="180dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="40dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:weightSum="2"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/currentpass"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/newpass"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/c_password"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:paddingLeft="10dp">


                <Button
                    android:id="@+id/acceptButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Change"
                    android:background="@color/colorAccent"
                    android:textColor="#ffffff"
                    android:visibility="visible"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <Button
                    android:id="@+id/declineButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Close"
                    android:background="@color/colorAccent"
                    android:textColor="#ffffff"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>